--- a/assets/main.css
+++ b/assets/main.css
@@ -4,7 +4,7 @@ h1,
 h2,
 h3,
 h4 {
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
 }
 
 .active {
@@ -15,11 +15,11 @@ h4 {
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Baloo Paaji 2', cursive;
+    font-family: "Baloo Paaji 2", cursive;
 }
 
 .name-highlight {
-    color: #FFA033;
+    color: #ffa033;
     font-size: 40px;
 }
 
@@ -37,7 +37,7 @@ body {
     height: 3px;
     border-radius: 20px;
     margin: 30px auto;
-    background-color: #FFA033;
+    background-color: #ffa033;
     margin-bottom: 30px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
@@ -46,7 +46,7 @@ body {
 }
 
 .btn-general {
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -63,18 +63,17 @@ body {
 }
 
 .btn-portfolio {
-    color: #02B0AF;
+    color: #02b0af;
     font-size: 16px;
-    border: 2px solid #02B0AF;
+    border: 2px solid #02b0af;
 }
 
 .btn-portfolio:hover,
 .btn-portfolio:focus {
-    background-color: #02B0AF;
+    background-color: #02b0af;
     color: white;
-    border: 2px solid #02B0AF;
+    border: 2px solid #02b0af;
 }
-
 
 .input:focus,
 .input:active {
@@ -85,11 +84,9 @@ body {
 /* ///////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////// Navigation  //////////////////////////////////// */
 
-
 #nav-bg {
     background-color: whitesmoke;
 }
-
 
 .navbar-toggler:focus,
 .navbar-toggler:active {
@@ -114,10 +111,10 @@ body {
 
 .navbar-toggler span:nth-child(1),
 .navbar-toggler span:nth-child(3) {
-    -webkit-transition: transform .35s ease-in-out;
-    -moz-transition: transform .35s ease-in-out;
-    -o-transition: transform .35s ease-in-out;
-    transition: transform .35s ease-in-out;
+    -webkit-transition: transform 0.35s ease-in-out;
+    -moz-transition: transform 0.35s ease-in-out;
+    -o-transition: transform 0.35s ease-in-out;
+    transition: transform 0.35s ease-in-out;
 }
 
 .navbar-toggler:not(.collapsed) span:nth-child(1) {
@@ -145,18 +142,16 @@ body {
 }
 
 .navbar-toggler span {
-    background-color: #FFA033;
+    background-color: #ffa033;
 }
 
 .navbar-light .navbar-toggler {
-    color: #FFA033;
-    border-color: #FFA033;
+    color: #ffa033;
+    border-color: #ffa033;
 }
-
 
 /* ///////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////////// Home /////////////////////////////////////// */
-
 
 #home {
     display: flex;
@@ -166,9 +161,8 @@ body {
     height: 500px;
 }
 
-
 .home-left button {
-    background-color: #FFA033;
+    background-color: #ffa033;
     color: black;
     margin-top: 10px;
     box-shadow: 3px 4px 3px gray;
@@ -198,7 +192,6 @@ body {
     color: black;
 }
 
-
 #social-section {
     display: flex;
     padding: 0px;
@@ -209,8 +202,6 @@ body {
     font-size: 20px;
 }
 
-
-
 /* ///////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////////// portfolio /////////////////////////////////////// */
 
@@ -219,8 +210,13 @@ body {
     padding: 30px 20px;
 }
 
+.portfolio-bg {
+    margin-top: -16px;
+}
 
-
+.portfolio-bg-footer {
+    margin-bottom: -16px;
+}
 
 #photos {
     margin-top: 50px;
@@ -243,11 +239,14 @@ body {
 }
 
 #photos img:hover {
-    -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
-    -moz-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
-    -o-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
-    box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px, inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
-
+    -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px,
+        inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+    -moz-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px,
+        inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+    -o-box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px,
+        inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
+    box-shadow: rgba(0, 0, 0, 0.8) 0px 5px 15px,
+        inset rgba(0, 0, 0, 0.15) 0px -10px 20px;
 }
 
 #projects {
@@ -289,7 +288,6 @@ body {
     -o-border-radius: 20px;
 }
 
-
 /* ///////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////////// CV /////////////////////////////////////// */
 
@@ -315,7 +313,7 @@ body {
 }
 
 #description p {
-    color: #02B0AF;
+    color: #02b0af;
     font-size: 20px;
     font-weight: 500;
     transition: 0.3s all ease-in;
@@ -334,22 +332,16 @@ body {
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
     box-shadow: inset 3px 3px 4px black;
-
 }
-
-
 
 #description p:hover,
 #description p:focus {
-    transform: translatex(10px);
-    -webkit-transform: translatex(10px);
-    -moz-transform: translatex(10px);
-    -ms-transform: translatex(10px);
-    -o-transform: translatex(10px);
+    transform: translateX(10px);
+    -webkit-transform: translateX(10px);
+    -moz-transform: translateX(10px);
+    -ms-transform: translateX(10px);
+    -o-transform: translateX(10px);
 }
-
-
-
 
 @media only screen and (max-width: 600px) {
     #CV {
@@ -359,19 +351,14 @@ body {
     #description .fa-envelope {
         margin-right: 0px !important;
         margin-left: -30px;
-
     }
-
 }
-
 
 /* Education part */
 #education {
     background-color: whitesmoke;
     padding: 40px 20px;
 }
-
-
 
 .edu-bg {
     margin: 20px;
@@ -406,9 +393,8 @@ body {
     text-align: center;
     color: black;
     font-size: 20px;
-    background-image: linear-gradient(to right, #FFA033, #FFCF19);
+    background-image: linear-gradient(to right, #ffa033, #ffcf19);
     box-shadow: 5px 5px 10px gray;
-
 }
 
 .animation {
@@ -428,20 +414,16 @@ body {
     -o-transform: scale(1.05);
 }
 
-
 /* Skills */
 
 /* #skills-bg {
     background-color: white;
 } */
 
-
 #skills {
     padding-top: 80px;
     padding-bottom: 40px;
-
 }
-
 
 .skill-item {
     margin: 20px 20px;
@@ -470,7 +452,7 @@ body {
 .skill-item hr {
     width: 25%;
     height: 2px;
-    background-color: #FFD016;
+    background-color: #ffd016;
     margin: o auto;
     border: none;
     transition: all 0.5s;
@@ -485,12 +467,9 @@ body {
     color: white;
 }
 
-
-
 .skill-item:hover {
-    background-color: c;
+    background-color: #00cdac;
     /* box-shadow: 5px 5px 3px gray; */
-
 }
 
 .skill-item,
@@ -503,17 +482,16 @@ body {
 }
 
 .skill-item:hover hr {
-    background-color: #21211E;
+    background-color: #21211e;
 }
 
 .skill-item:hover h5 {
-    color: #FFD016;
+    color: #ffd016;
     transform: translateY(-15px);
     -webkit-transform: translateY(-15px);
     -moz-transform: translateY(-15px);
     -ms-transform: translateY(-15px);
     -o-transform: translateY(-15px);
-
 }
 
 #skill-animation .skill-item {
@@ -533,14 +511,12 @@ body {
     -o-transform: translateY(-10px);
 }
 
-
 /* Progress */
 
 #interest {
     background-color: whitesmoke;
     padding: 60px 20px;
 }
-
 
 .Skill-bar-outer {
     margin: 20px 20px;
@@ -554,7 +530,7 @@ body {
 .progress-bar {
     font-weight: 600;
     color: black;
-    background-image: linear-gradient(to right, #FFA033, #FFCF19);
+    background-image: linear-gradient(to right, #ffa033, #ffcf19);
     /* background-color: #FFD016; */
 }
 
@@ -597,7 +573,6 @@ body {
     -o-transform: translateY(-10px);
 }
 
-
 /* ///////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////////// contact /////////////////////////////////////// */
 
@@ -619,7 +594,7 @@ body {
 
 .contact-inner input {
     background: transparent;
-    border: 1px solid #FFCF19;
+    border: 1px solid #ffcf19;
 }
 
 .contact-inner input:hover,
@@ -645,14 +620,12 @@ body {
     -o-transform: translateY(-10px);
 }
 
-
-
 .bg-primary {
     background-color: #00cdac !important;
 }
 
 .btn-block {
-    background-color: #FFA033 !important;
+    background-color: #ffa033 !important;
     transition: 0.3s all ease-in;
     -webkit-transition: 0.3s all ease-in;
     -moz-transition: 0.3s all ease-in;
@@ -664,67 +637,8 @@ body {
     background-color: #00cdac !important;
 }
 
-
-/***about me*/
-
-.about-area button {
-
-    background-color: #00cdac;
-    color: black;
-    margin-top: 10px;
-    box-shadow: 3px 4px 3px gray;
-    transition: 0.3s all ease-in;
-    -webkit-transition: 0.3s all ease-in;
-    -moz-transition: 0.3s all ease-in;
-    -ms-transition: 0.3s all ease-in;
-    -o-transition: 0.3s all ease-in;
-}
-
-.about-area button:hover {
-    transform: translateX(10px);
-    -webkit-transform: translateX(10px);
-    -moz-transform: translateX(10px);
-    -ms-transform: translateX(10px);
-    -o-transform: translateX(10px);
-}
-
-
-
-.about-area button a {
-    text-decoration: none;
-    color: black;
-}
-
-.about-area img {
-    clip-path: circle(30%);
-}
-
-.about-area img:hover {
-    transform: translateX(20px);
-    -webkit-transform: translateX(20px);
-    -webkit-transform: translateY(-20px);
-    -moz-transform: translateX(20px);
-    -ms-transform: translateX(20px);
-    -o-transform: translateX(20px);
-    transition: all ease-in-out 2s;
-    filter: hue-rotate(-360deg);
-}
-
-#section-outer img:hover {
-    transform: translateX(20px);
-    -webkit-transform: translateX(20px);
-    -webkit-transform: translateY(-20px);
-    -moz-transform: translateX(20px);
-    -ms-transform: translateX(20px);
-    -o-transform: translateX(20px);
-    transition: all ease-in-out 2s;
-    filter: hue-rotate(-360deg);
-}
-
-
 /* ///////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////////// footer /////////////////////////////////////// */
-
 
 footer {
     margin-top: 50px;
@@ -787,23 +701,186 @@ ul.social-list li:nth-child(2) a:hover {
     border-color: transparent;
 }
 
-
 ul.social-list li:nth-child(3) a:hover {
     background-color: #dd4b39;
     border-color: transparent;
 }
 
 ul.social-list li:nth-child(4) a:hover {
-    background-color: #1DA1F3;
+    background-color: #1da1f3;
     border-color: transparent;
 }
 
 ul.social-list li:nth-child(5) a:hover {
-    background-color: #0077B7;
+    background-color: #0077b7;
     border-color: transparent;
 }
 
 ul.social-list li:nth-child(6) a:hover {
-    background-color: #E7002A;
+    background-color: #e7002a;
     border-color: transparent;
+}
+
+/* ///////////////////////////////////////////////////////////////////////////////////
+///////////////////////////////////// Modal /////////////////////////////////////// */
+
+/* ////////Modal 1 //////////// */
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    margin: 10% auto;
+    width: 60%;
+    border-radius: 20px;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.modal-header {
+    padding: 15px;
+    color: black;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    background-color: #01bcae;
+}
+
+.modal-body {
+    padding: 10px 20px;
+    background: #fff;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+#close-btn {
+    color: white;
+    float: right;
+    font-size: 30px;
+}
+
+#close-btn:hover,
+#close-btn:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* ///////////// modal 2 /////////////// */
+
+.modal2 {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    margin: 10% auto;
+    width: 60%;
+    border-radius: 20px;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.modal-header {
+    padding: 15px;
+    color: black;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.danger {
+    background-color: #e7002a;
+}
+
+.modal-body {
+    padding: 10px 20px;
+    background: #fff;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+#close-btn2 {
+    color: white;
+    float: right;
+    font-size: 30px;
+}
+
+#close-btn2:hover,
+#close-btn2:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* ///////////////////////////////////////////////////////////////////////////////////
+///////////////////////// Home page text animation //////////////////////////////// */
+
+#home span {
+    color: #ffa033;
+    transition: 1s all ease-in;
+}
+
+#home span.fadeIT {
+    color: #00cdac;
+}
+
+/* ///////////////////////////////////////////////////////////////////////////////////
+////////////////////////////// text reval animation  //////////////////////////////// */
+
+.intro-text {
+    opacity: 0;
+    transform: translateX(-30px);
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+    transition: 1.2s all ease-in-out;
+    -webkit-transition: 1.2s all ease-in-out;
+    -moz-transition: 1.2s all ease-in-out;
+    -ms-transition: 1.2s all ease-in-out;
+    -o-transition: 1.2s all ease-in-out;
+}
+
+.intro-text2 {
+    opacity: 0;
+    transform: translateX(30px);
+    -webkit-transform: translateX(30px);
+    -moz-transform: translateX(30px);
+    -ms-transform: translateX(30px);
+    -o-transform: translateX(30px);
+    transition: 1.2s all ease-in-out;
+    -webkit-transition: 1.2s all ease-in-out;
+    -moz-transition: 1.2s all ease-in-out;
+    -ms-transition: 1.2s all ease-in-out;
+    -o-transition: 1.2s all ease-in-out;
+}
+
+.intro-appear {
+    opacity: 1;
+    transform: translateX(0px);
+    -webkit-transform: translateX(0px);
+    -moz-transform: translateX(0px);
+    -ms-transform: translateX(0px);
+    -o-transform: translateX(0px);
 }
