--- a/assets/main.css
+++ b/assets/main.css
@@ -572,7 +572,9 @@ on cv page there will not be any clip-path*/
   background-color: #21211e;
 }
 
-.skill-item:hover h5 {
+/*heading color will change to yellow when mouse is placed.
+content will go upwards this is animation*/
+*/ .skill-item:hover h5 {
   color: #ffd016;
   transform: translateY(-15px);
   -webkit-transform: translateY(-15px);
@@ -581,39 +583,50 @@ on cv page there will not be any clip-path*/
   -o-transform: translateY(-15px);
 }
 
+/*
+id skill-animation for skill item where single transition will take place.
+
+*/
 #skill-animation .skill-item {
   transition: 0.5s all ease-in;
+  /*duration for the transition adn the effect*/
   -webkit-transition: 0.5s all ease-in;
   -moz-transition: 0.5s all ease-in;
   -ms-transition: 0.5s all ease-in;
   -o-transition: 0.5s all ease-in;
 }
 
+/*this will be upon mouse hovering*/
 #skill-animation .skill-item :hover h5,
 #skill-animation .skill-item :focus h5 {
   transform: translateY(-10px);
+  /*-10px towards y axis when mouse is placed*/
   -webkit-transform: translateY(-10px);
   -moz-transform: translateY(-10px);
   -ms-transform: translateY(-10px);
   -o-transform: translateY(-10px);
 }
 
-/* Progress */
+/*PROGRESS BAR */
 
+/*id for the  interest section*/
 #interest {
   background-color: whitesmoke;
   padding: 60px 20px;
 }
 
+/*progress bar outer margin*/
 .Skill-bar-outer {
   margin: 20px 20px;
 }
 
+/*for h5 of progress bar-*/
 .Skill-bar-outer h5 {
   line-height: 60px;
   color: #00cdac;
 }
 
+/*class for progress bar*/
 .progress-bar {
   font-weight: 600;
   color: black;
@@ -621,16 +634,19 @@ on cv page there will not be any clip-path*/
   /* background-color: #FFD016; */
 }
 
+/*class for the empty part of progress bar*/
 .progress {
   height: 25px;
   background-color: lightgrey;
 }
 
+/*id for reference section*/
 #reference {
   padding: 40px 20px;
   margin: 30px 0;
 }
 
+/*for items inside the references*/
 .reference_inner {
   text-align: center;
   color: whitesmoke;
@@ -638,7 +654,9 @@ on cv page there will not be any clip-path*/
   margin: 20px 20px;
   padding: 40px 10px;
   background-image: linear-gradient(#00cdac, #02aab0);
+  /*background color*/
   border-radius: 20px;
+  /*radius of the outer borde edge*/
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
