--- a/assets/main.css
+++ b/assets/main.css
@@ -159,7 +159,7 @@ and the border is 2 px solid
   align-items: center;
   padding: 40px 40px;
   margin-top: 20px;
-  height: 500px;
+  height: 100vh;
 }
 
 /*landing page left button
